# llm-server

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  example.env  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: python-test.yml  ruff.yml
docs/: DEEP_DIVE.md  deep-dive.md  performance_testing.md
src/: __int__.py  config.py  main.py
src/api/: __init__.py  auth.py  middleware.py  models.py
src/api/routers/: __init__.py  completions.py  health.py  metrics.py  model_list.py  outlines_models.py  schema_registry.py  structured_completions.py
src/llm/: batch_processing.py  connection_pool.py  providers.py
src/monitoring/: logger.py  metrics.py  tracer.py
src/validation/: output_validator.py  schema_registry.py  transformers.py
tests/: conftest.py
tests/performance/: conversation_prompts.json  conversation_test.sh  performance_test.sh  structured_test_cases.json  structured_vs_unstructured_test.sh
tests/unit/api/: test_auth.py  test_middleware.py  test_outlines_models.py  test_schema_registry_endpoint.py  test_structured_completions.py
tests/unit/api/router/: test_health.py
tests/unit/api/routers/: test_completions.py  test_health.py  test_metrics.py  test_model_list.py
tests/unit/llm/: test_batch_processing.py  test_connection_pool.py  test_providers.py
tests/unit/monitoring/: test_logger.py  test_metrics.py  test_tracer.py
tests/unit/validation/: test_output_validator.py  test_schema_registry.py  test_transformers.py
