[project]
name = "llm-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
    "uvicorn>=0.34.0",
]
